css/style.css
/* ... */
.our_room .room .book_btn:hover {
     background: #e64600;
     color: #fff;
     text-decoration: none;
}

.our_room .room .carousel-control-prev,
.our_room .room .carousel-control-next {
     width: 40px;
     height: 40px;
     background: rgba(0,0,0,0.5);
     border-radius: 50%;
     top: 50%;
     transform: translateY(-50%);
     margin: 0 10px;
     opacity: 1;
     display: flex;
     align-items: center;
     justify-content: center;
}

.our_room .room .carousel-control-prev {
     left: 10px;
}

.our_room .room .carousel-control-next {
     right: 10px;
}

.our_room .room .carousel-control-prev-icon,
.our_room .room .carousel-control-next-icon {
     width: 20px;
     height: 20px;
     background-size: 100%;
     opacity: 1;
}

.our_room .room .carousel-control-prev:hover,
.our_room .room .carousel-control-next:hover {
     background: rgba(0,0,0,0.8);
}

.our_room .room .carousel {
     position: relative;
}

.our_room .room .carousel-inner {
     position: relative;
     width: 100%;
     overflow: hidden;
}

#serv_hover:hover.room {
     cursor: pointer;
     box-shadow: 0px 0px 30px rgba(255, 9, 9, 0.15);
     transition: ease-in all 0.5s;
}

@media (max-width: 575px) {
    .our_room .room .room_img .carousel,
    .our_room .room .room_img .carousel-item {
        min-height: 200px;
    }
    
    .our_room .room .room_img .carousel-item img {
        max-height: 250px;
    }
}

/** end our_room section **/


/** gallery  section **/

.gallery {
     padding-top: 60px;
}

.gallery .titlepage {
     text-align: center;
}

.gallery .gallery_img {
     overflow: hidden;
     margin-bottom: 30px;
}

.gallery .gallery_img figure {
     margin: 0;
}

.gallery .gallery_img figure img {
     width: 100%;
     transition: all .5s;
}

.gallery .gallery_img figure img:hover {
     transform: scale(1.2);
}


/** end gallery  section **/


/** blog section **/

.blog {
     background: url(../images/blog_bg.jpg);
     background-repeat: no-repeat;
     background-size: 100% 100%;
     padding: 60px 0 30px 0;
     margin-top: 60px;
}

.blog .titlepage {
     text-align: center;
}

.blog .titlepage h2 {
     color: #fff;
}

.blog .titlepage p {
     color: #fff;
     font-size: 17px;
     margin-top: 20px;
}

.blog .blog_box {
     text-align: left;
     background-color: #fff;
     margin-bottom: 30px;
     transition: ease-in all 0.5s;
}

.blog .blog_box .blog_img {
     overflow: hidden;
}

.blog .blog_box .blog_img figure {
     margin: 0;
}

.blog .blog_box .blog_img figure img {
     width: 100%;
     transition: all .5s;
}

.blog .blog_box .blog_img figure img:hover {
     transform: scale(1.2);
}

.blog .blog_box .blog_room {
     padding: 33px 30px;
     text-align: left;
}

.blog .blog_box .blog_room h3 {
     color: #121212;
     font-size: 25px;
     line-height: 20px;
     font-weight: 500;
     padding-bottom: 5px;
     transition: ease-in all 0.5s;
     margin: auto;
}

.blog .blog_box .blog_room span {
     font-size: 15px;
     color: #ff0909;
     font-weight: bold;
     margin-bottom: 10px;
     display: block;
}

.blog .blog_box .blog_room p {
     font-size: 14px;
     line-height: 20px;
}


/** end blog section **/


/** contact section **/

.contact {
     background: #fff;
     margin-top: 90px;
}

.main_form .contactus {
     border: #fff solid 1px;
     padding: 0 15px;
     margin-bottom: 25px;
     width: 100%;
     height: 58px;
     background: #fff;
     color: #000000;
     font-size: 18px;
     font-weight: normal;
     box-shadow: 2px 0px 6px rgba(255, 9, 9, 0.20);
}

.main_form .textarea {
     border: #fff solid 1px;
     margin-bottom: 25px;
     width: 100%;
     background: #fff;
     color: #000000;
     font-size: 18px;
     font-weight: normal;
     padding: 12px 15px 0 15px;
     box-shadow: 2px 0px 6px rgba(255, 9, 9, 0.20);
     height: 150px;
}

.main_form .send_btn {
     font-size: 22px;
     transition: ease-in all 0.5s;
     background-color: #000000;
     text-transform: uppercase;
     color: #fff;
     padding: 10px 0px;
     max-width: 193px;
     width: 100%;
     display: block;
     margin-top: 10px !important;
     font-weight: 500;
     border-radius: 50px;
}

.main_form .send_btn:hover {
     background-color: #ff0909;
     transition: ease-in all 0.5s;
     color: #fff;
}

#request *::placeholder {
     color: #000000;
     opacity: 1;
}

.map figure {
     margin: 0;
}

.map figure img {
     width: 100%;
}


/** end contact section **/


/** footer **/

.footer {
     background: #0f1521;
     margin-top: 90px;
     padding-top: 60px;
     text-align: center;
}

.footer h3 {
     font-weight: 600;
     font-size: 25px;
     line-height: 24px;
     text-align: left;
     color: #fff;
     margin-bottom: 15px;
     border-bottom: #ff0909 solid 3px;
     padding-bottom: 3px;
     display: table;
}

ul.conta li {
     color: #fff;
     text-align: left;
     padding-bottom: 20px;
     font-size: 16px;
}

ul.conta li i {
     padding-right: 15px;
     text-align: center;
     font-size: 20px;
}

ul.conta li a {
     color: #fff;
}

ul.link_menu li {
     display: block;
     text-align: left;
}

ul.link_menu li.active a {
     color: #ff0909;
}

ul.link_menu li a {
     color: #fff;
     font-size: 17px;
     line-height: 28px;
     display: block;
     width: -moz-max-content;
}

ul.link_menu li a:hover {
     color: #ff0909;
}

.bottom_form {
     display: flex;
     flex-wrap: wrap;
     margin-top: 32px;
}

.bottom_form h3 {
     font-weight: 600;
     font-size: 20px;
     line-height: 25px;
     text-align: left;
     color: #fff;
     padding-top: 12px;
     margin-right: 93px;
     text-transform: uppercase;
     border: inherit;
}

.bottom_form .enter {
     border: inherit;
     padding: 0px 19px;
     width: 100%;
     height: 45px;
     background: #fffffff2;
     color: #ccc8c8;
     font-size: 17px;
     font-weight: 300;
     float: left;
     margin-bottom: 20px;
}
/* ... */

